subida de ejercicio de prompt y alert simple

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <main>
+        <div>
+            <h1>Ingresá tu nombre</h1>
+            <button id="botonIngresaNombre">Hacé click acá</button>
+        </div>
         <section class="container1">
             <h1>Buscá tus productos</h1>
             <input type="search" class="inputBuscar" placeholder="Buscá tu próximo producto" aria-label="Buscar">
@@ -52,6 +56,7 @@
                 <p>Total: $<span id="total">0</span></p>
             </div>
         </section>
+        
     </main>
     <script src="./scripts.js"></script>
 </body>
